feat: Update dashboards, fix revenue calculation, and sync DB schema with new migrations

--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -18,19 +18,21 @@
     <div class="auth-screen" id="authScreen">
         <div class="auth-card">
             <div class="auth-header">
-                <h1>🛡️ QScrap Admin</h1>
+                <img src="assets/images/qscrap-logo.png" alt="QScrap" class="auth-logo">
+                <h1>QScrap Admin</h1>
                 <p>Platform Management Console</p>
             </div>
-            <form id="loginForm">
+            <form id="loginForm" autocomplete="off">
                 <div class="form-group">
                     <label>Admin Phone</label>
-                    <input type="tel" id="loginPhone" placeholder="+974 XXXX XXXX" required>
+                    <input type="tel" id="loginPhone" placeholder="+974 XXXX XXXX" required autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label>Password</label>
-                    <input type="password" id="loginPassword" placeholder="Enter password" required>
+                    <input type="password" id="loginPassword" placeholder="Enter password" required
+                        autocomplete="new-password">
                 </div>
-                <button type="submit" class="btn btn-primary">
+                <button type="submit" class="btn btn-primary" id="loginBtn">
                     <i class="bi bi-shield-lock"></i> Sign In
                 </button>
             </form>
@@ -42,7 +44,8 @@
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="sidebar-header">
-                <h2>🛡️ QScrap</h2>
+                <img src="assets/images/qscrap-logo.png" alt="QScrap" class="sidebar-logo">
+                <h2>QScrap</h2>
                 <span class="admin-badge">ADMIN</span>
             </div>
             <nav class="sidebar-nav">
@@ -92,6 +95,48 @@
                 </button>
             </div>
         </aside>
+
+        <!-- Top Header Bar -->
+        <header class="top-header">
+            <div class="header-left">
+                <span class="header-greeting" id="headerGreeting">Welcome back, Admin</span>
+                <span class="header-subtitle">Platform Management Console</span>
+            </div>
+            <div class="header-right">
+                <div class="header-datetime" id="headerDateTime">
+                    <i class="bi bi-clock"></i>
+                    <span id="liveDateTime">--</span>
+                </div>
+                <button class="header-btn" onclick="loadDashboard()" title="Refresh (R)">
+                    <i class="bi bi-arrow-clockwise" id="refreshIcon"></i>
+                </button>
+                <button class="header-btn" onclick="showKeyboardShortcuts()" title="Keyboard Shortcuts (?)">
+                    <i class="bi bi-keyboard"></i>
+                </button>
+                <div class="header-notifications">
+                    <button class="header-btn notification-btn" onclick="toggleNotifications()" id="notificationBtn">
+                        <i class="bi bi-bell"></i>
+                        <span class="notification-dot" id="notificationDot" style="display: none;"></span>
+                    </button>
+                    <div class="notifications-dropdown" id="notificationsDropdown">
+                        <div class="notifications-header">
+                            <span>System Alerts</span>
+                            <button class="btn-link" onclick="markAllRead()">Mark all read</button>
+                        </div>
+                        <div class="notifications-list" id="notificationsList">
+                            <div class="notification-empty">
+                                <i class="bi bi-bell-slash"></i>
+                                <span>No new notifications</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="header-status" title="System Status">
+                    <span class="status-indicator online"></span>
+                    <span>Online</span>
+                </div>
+            </div>
+        </header>
 
         <!-- Main Content -->
         <main class="main-content">
@@ -870,6 +915,41 @@
             </div>
             <div class="modal-actions" id="createUserActions">
                 <button class="btn btn-outline" onclick="closeModal('createUserModal')">Cancel</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Keyboard Shortcuts Modal -->
+    <div class="modal-overlay" id="keyboardShortcutsModal">
+        <div class="modal">
+            <div class="modal-header" style="background: linear-gradient(135deg, #374151, #1f2937);">
+                <h3><i class="bi bi-keyboard"></i> Keyboard Shortcuts</h3>
+                <button class="modal-close" onclick="closeModal('keyboardShortcutsModal')">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="shortcuts-grid">
+                    <div class="shortcut-section">
+                        <h4>Navigation</h4>
+                        <div class="shortcut-row"><kbd>1</kbd> <span>Dashboard</span></div>
+                        <div class="shortcut-row"><kbd>2</kbd> <span>Approvals</span></div>
+                        <div class="shortcut-row"><kbd>3</kbd> <span>Garages</span></div>
+                        <div class="shortcut-row"><kbd>4</kbd> <span>Users</span></div>
+                        <div class="shortcut-row"><kbd>5</kbd> <span>Staff</span></div>
+                        <div class="shortcut-row"><kbd>6</kbd> <span>Drivers</span></div>
+                        <div class="shortcut-row"><kbd>7</kbd> <span>Audit Log</span></div>
+                        <div class="shortcut-row"><kbd>8</kbd> <span>Reports</span></div>
+                    </div>
+                    <div class="shortcut-section">
+                        <h4>Actions</h4>
+                        <div class="shortcut-row"><kbd>N</kbd> <span>New User</span></div>
+                        <div class="shortcut-row"><kbd>R</kbd> <span>Refresh Data</span></div>
+                        <div class="shortcut-row"><kbd>?</kbd> <span>Show Shortcuts</span></div>
+                        <div class="shortcut-row"><kbd>Esc</kbd> <span>Close Modal</span></div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-actions">
+                <button class="btn btn-primary" onclick="closeModal('keyboardShortcutsModal')">Got it!</button>
             </div>
         </div>
     </div>
