--- a/public/operations-dashboard.html
+++ b/public/operations-dashboard.html
@@ -24,19 +24,20 @@
     <div class="login-screen" id="loginScreen">
         <div class="login-card">
             <div class="login-header">
-                <div class="login-logo"><i class="bi bi-building-gear"></i></div>
+                <img src="assets/images/qscrap-logo.png" alt="QScrap" class="login-logo">
                 <h1 class="login-title">Operations Center</h1>
                 <p class="login-subtitle">QScrap Internal Dashboard</p>
             </div>
-            <form id="loginForm">
+            <form id="loginForm" autocomplete="off">
                 <div class="form-group">
                     <label>Email / Phone</label>
                     <input type="text" class="form-control" id="loginEmail" placeholder="Enter your credentials"
-                        required>
+                        required autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label>Password</label>
-                    <input type="password" class="form-control" id="loginPassword" placeholder="••••••••" required>
+                    <input type="password" class="form-control" id="loginPassword" placeholder="••••••••" required
+                        autocomplete="new-password">
                 </div>
                 <button type="submit" class="btn-login">
                     <i class="bi bi-box-arrow-in-right"></i> Sign In
@@ -51,7 +52,7 @@
         <aside class="sidebar">
             <div class="sidebar-header">
                 <div class="sidebar-logo">
-                    <div class="logo-icon"><i class="bi bi-building-gear"></i></div>
+                    <img src="assets/images/qscrap-logo.png" alt="QScrap" class="sidebar-logo-img">
                     <div>
                         <div class="logo-text">QScrap</div>
                         <div class="logo-subtitle">Operations</div>
@@ -146,6 +147,45 @@
                 </button>
             </div>
         </aside>
+
+        <!-- Top Header Bar -->
+        <header class="top-header">
+            <div class="header-left">
+                <div class="header-greeting">
+                    <span id="greetingText">Good morning</span>, <strong id="operatorName">Operator</strong>
+                </div>
+                <div class="header-datetime" id="headerDateTime">
+                    Loading...
+                </div>
+            </div>
+            <div class="header-right">
+                <button class="header-btn" onclick="refreshCurrentSection()" title="Refresh (R)">
+                    <i class="bi bi-arrow-clockwise" id="refreshIcon"></i>
+                </button>
+                <button class="header-btn" onclick="showKeyboardShortcuts()" title="Keyboard Shortcuts (?)">
+                    <i class="bi bi-keyboard"></i>
+                </button>
+                <div class="header-notifications">
+                    <button class="header-btn notification-btn" onclick="toggleNotifications()">
+                        <i class="bi bi-bell"></i>
+                        <span class="notification-badge" id="notificationBadge" style="display: none;">0</span>
+                    </button>
+                    <div class="notifications-dropdown" id="notificationsDropdown">
+                        <div class="notifications-header">
+                            <span>System Alerts</span>
+                            <button onclick="markAllRead()">Mark all read</button>
+                        </div>
+                        <div class="notifications-list" id="notificationsList">
+                            <div class="notification-empty">No new notifications</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="header-status">
+                    <span class="status-dot"></span>
+                    <span>Online</span>
+                </div>
+            </div>
+        </header>
 
         <!-- Main Content -->
         <main class="main-content" id="main-content">
@@ -1369,6 +1409,41 @@
 
     <!-- Toast Container -->
     <div class="toast-container" id="toastContainer"></div>
+
+    <!-- Keyboard Shortcuts Modal -->
+    <div class="modal-overlay" id="keyboardShortcutsModal" style="display: none;">
+        <div class="shortcuts-modal">
+            <div class="shortcuts-header">
+                <h3><i class="bi bi-keyboard"></i> Keyboard Shortcuts</h3>
+                <button class="close-btn" onclick="closeAllModals()">&times;</button>
+            </div>
+            <div class="shortcuts-grid">
+                <div class="shortcuts-section">
+                    <h4>Navigation</h4>
+                    <div class="shortcut-item"><kbd>1</kbd> <span>Overview</span></div>
+                    <div class="shortcut-item"><kbd>2</kbd> <span>Orders</span></div>
+                    <div class="shortcut-item"><kbd>3</kbd> <span>Quality</span></div>
+                    <div class="shortcut-item"><kbd>4</kbd> <span>Delivery</span></div>
+                    <div class="shortcut-item"><kbd>5</kbd> <span>Disputes</span></div>
+                    <div class="shortcut-item"><kbd>6</kbd> <span>Reviews</span></div>
+                    <div class="shortcut-item"><kbd>7</kbd> <span>Support</span></div>
+                    <div class="shortcut-item"><kbd>8</kbd> <span>Users</span></div>
+                    <div class="shortcut-item"><kbd>9</kbd> <span>Finance</span></div>
+                </div>
+                <div class="shortcuts-section">
+                    <h4>Actions</h4>
+                    <div class="shortcut-item"><kbd>R</kbd> <span>Refresh Section</span></div>
+                    <div class="shortcut-item"><kbd>N</kbd> <span>New Action</span></div>
+                    <div class="shortcut-item"><kbd>?</kbd> <span>Show Shortcuts</span></div>
+                    <div class="shortcut-item"><kbd>Esc</kbd> <span>Close Modal</span></div>
+                    <div class="shortcut-item"><kbd>Ctrl</kbd>+<kbd>K</kbd> <span>Global Search</span></div>
+                </div>
+            </div>
+            <div class="shortcuts-footer">
+                <button class="btn btn-primary" onclick="closeAllModals()">Got it!</button>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
     <!-- Shared JS utilities (must come before module JS) -->
