--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -478,6 +478,16 @@
                         <option value="refurbished">Refurbished</option>
                     </select>
                 </div>
+                <div class="form-row" style="display: grid; grid-template-columns: 1fr 1fr; gap: 16px;">
+                    <div class="form-group">
+                        <label>Brand (Optional)</label>
+                        <input type="text" class="form-control" id="bidBrand" placeholder="e.g. Toyota, Bosch">
+                    </div>
+                    <div class="form-group">
+                        <label>Part Number (Optional)</label>
+                        <input type="text" class="form-control" id="bidPartNumber" placeholder="e.g. 123-456-789">
+                    </div>
+                </div>
                 <div class="form-group">
                     <label>Warranty (Days)</label>
                     <input type="number" class="form-control" id="bidWarranty" value="7" required min="0">
