--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -109,6 +109,7 @@
                 <a class="nav-item" data-section="bids">
                     <i class="bi bi-tag-fill"></i>
                     My Bids
+                    <span class="nav-badge" id="bidsBadge" style="background: #f59e0b; display: none;">0</span>
                 </a>
                 <a class="nav-item" data-section="orders">
                     <i class="bi bi-box-seam-fill"></i>
